// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel renders correctly 1`] = `
<View
  0={
    Object {
      "children": "John Smith",
      "containerStyle": Array [],
      "labelStyle": Array [
        Object {
          "color": "#222222",
          "fontFamily": "OpenSans-Regular",
          "marginLeft": 0,
          "marginRight": 0,
        },
      ],
    }
  }
  1={Array []}
  style={
    Array [
      Object {},
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Array [
          Object {
            "color": "#86939e",
            "fontSize": 15,
            "fontWeight": "bold",
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 15,
          },
          undefined,
          undefined,
        ],
      ]
    }
  >
    John Smith
  </Text>
</View>
`;

exports[`FormLabel renders correctly 2`] = `
<View
  0={
    Object {
      "children": "John Smith",
      "containerStyle": Array [],
      "labelStyle": Array [
        Object {
          "color": "#50527F",
          "fontFamily": "OpenSans-Regular",
        },
      ],
    }
  }
  1={Array []}
  style={
    Array [
      Object {},
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Array [
          Object {
            "color": "#86939e",
            "fontSize": 15,
            "fontWeight": "bold",
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 15,
          },
          undefined,
          undefined,
        ],
      ]
    }
  >
    John Smith
  </Text>
</View>
`;
